Tweak tmux config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,5 @@
-# Need to clone the following to enable plugins
-# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 # Set prefix
 unbind C-b
@@ -17,10 +17,10 @@ bind -n M-L next-window
 set -g mouse on
 
 # Start indexing at 1
-set -g base-index 1
-set -g pane-base-index 1
-set-window-option -g pane-base-index 1
-set-option -g renumber windows on
+# set -g base-index 1
+# set -g pane-base-index 1
+# set-window-option -g pane-base-index 1
+# set-option -g renumber windows on
 
 # Set vi-mode
 set-window-option -g mode-keys vi
@@ -35,11 +35,10 @@ bind '|' split-window -h -c "#{pane_current_path}"
 bind '-' split-window -v -c "#{pane_current_path}"
 
 set -g @catpuccin_flavour 'mocha'
-
-set -g @plugin 'tmux-plugins/tmux'
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'catpuccin/tmux'
+set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.tmux/plugins/tpm/tpm'
