Modify tmux mouse support
- Adds ability to toggle on/off mouse support

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -13,8 +13,15 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 bind -n M-H previous-window
 bind -n M-L next-window
 
-# Mouse support
-set -g mouse on
+# toggle mouse mode to allow mouse copy/paste
+# set mouse on with prefix m
+bind m \
+    set -g mouse on \;\
+    display 'Mouse: ON'
+# set mouse off with prefix M
+bind M \
+    set -g mouse off \;\
+    display 'Mouse: OFF'
 
 # Start indexing at 1
 # set -g base-index 1
