--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,46 +6,69 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
+set -g default-terminal "tmux-256color"
 # Forces 24-bit color if the terminal supports it
 set-option -sa terminal-overrides ",xterm*:Tc"
 
-# Shift + Alt vim keys to switch windows
-bind -n M-H previous-window
-bind -n M-L next-window
+set -g mouse on
 
-# toggle mouse mode to allow mouse copy/paste
-# set mouse on with prefix m
-bind m \
-    set -g mouse on \;\
-    display 'Mouse: ON'
-# set mouse off with prefix M
-bind M \
-    set -g mouse off \;\
-    display 'Mouse: OFF'
+# Allow tmux to interact with system clipboard
+set -g set-clipboard on
 
 # Start indexing at 1
-# set -g base-index 1
-# set -g pane-base-index 1
-# set-window-option -g pane-base-index 1
-# set-option -g renumber windows on
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
-# Set vi-mode
+# Vim-like copy/paste
 set-window-option -g mode-keys vi
-
-# Keybindings for copying
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
+# Vim like pane selection
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # Open panes in current directory
-bind '|' split-window -h -c "#{pane_current_path}"
-bind '-' split-window -v -c "#{pane_current_path}"
+unbind '"'
+unbind %
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# Alt+hjkl to switch panes (vim-style)
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Alt+number to select window
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
+
+# Display Popups
+bind C-t display-popup \
+  -d "#{pane_current_path}" \
+  -w 75% \
+  -h 75% \
+  -E "zsh"
 
 set -g @catpuccin_flavour 'mocha'
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
-set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.tmux/plugins/tpm/tpm'
+
+unbind r
+bind r source-file $HOME/.config/tmux/tmux.conf
